--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js"
+    
   },
   "author": "8 Members",
   "license": "ISC",
